# simple-hyper-client

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
example/: Cargo.toml
example/src/: lib.rs
simple-hyper-client/: CHANGELOG.md  Cargo.toml
simple-hyper-client-native-tls/: CHANGELOG.md  Cargo.toml
simple-hyper-client-native-tls/src/: lib.rs
simple-hyper-client-rustls/: CHANGELOG.md  Cargo.toml
simple-hyper-client-rustls/src/: lib.rs
simple-hyper-client/src/: async_client.rs  body.rs  connector_impl.rs  error.rs  lib.rs  shared_body.rs  util.rs
simple-hyper-client/src/blocking/: body.rs  client.rs  mod.rs
simple-hyper-client/src/body/: mod.rs  shared.rs
simple-hyper-client/src/connector/: http.rs  hyper_adapter.rs  mod.rs
src/: async_client.rs  error.rs  lib.rs  shared_body.rs
src/blocking/: body.rs  client.rs  mod.rs  wait.rs
src/connector/: http.rs  https.rs  hyper_adapter.rs  mod.rs
test-ca/: README.md
