[package]
name = "simple-hyper-client"
version = "0.1.0"
authors = ["Mohsen Zohrevandi <mohsen.zohrevandi@fortanix.com>"]
edition = "2018"

[dependencies]
futures-util = "0.3.18"
headers = "0.3.7"
http = "0.2.6"
hyper = { version = "0.14.17", features = ["client", "http1", "http2", "stream"] }
tokio = { version = "1.15.0", features = ["rt", "macros", "net", "sync", "time"] }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-stream = "0.1.8"

[features]
native-tls = ["tokio-native-tls"]
