[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
simple-hyper-client = { version = "0.2.0", path = "../simple-hyper-client" }
simple-hyper-client-native-tls = { version = "0.1.0", path = "../simple-hyper-client-native-tls" }
simple-hyper-client-rustls = { version = "0.1.0", path = "../simple-hyper-client-rustls" }
tokio = { version = "1.45.1"}
tokio-native-tls = { version = "0.3.0" }
tokio-rustls = { version = "0.26.3" }
webpki-roots = { version = "1.0.0" }


[[bin]]
name = "rustls_client"

[[bin]]
name = "rustls_client_async"

[[bin]]
name = "native_tls_client"

[[bin]]
name = "native_tls_client_async"