[package]
name = "simple-hyper-client-native-tls"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
TLS connector implementation for simple-hyper-client using tokio-native-tls
"""
readme = "../README.md"
repository = "https://github.com/fortanix/simple-hyper-client"
documentation = "https://docs.rs/simple-hyper-client-native-tls"
homepage = "https://github.com/fortanix/simple-hyper-client"
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
simple-hyper-client = { version = "0.2.0", path = "../simple-hyper-client" }
tokio = { version = "1.47.0", features = ["rt", "macros", "net", "sync", "time"] }
tokio-native-tls = { version = "0.3.0" }
