[package]
name = "simple-hyper-client"
version = "0.2.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
A wrapper for hyper's HTTP client providing a simpler interface as well as a blocking interface
"""
readme = "../README.md"
repository = "https://github.com/fortanix/simple-hyper-client"
documentation = "https://docs.rs/simple-hyper-client"
homepage = "https://github.com/fortanix/simple-hyper-client"
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
futures-executor = "0.3.21"
headers = "0.3.7"
http = "0.2.6"
hyper = { version = "0.14.17", features = ["client", "http1", "http2", "stream"] }
tokio = { version = "1.45.0", features = ["rt", "macros", "net", "sync", "time"] }
tokio-stream = "0.1.8"

[dev-dependencies]
futures-util = "0.3.21"
