[package]
name = "simple-hyper-client"
version = "0.3.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
A wrapper for hyper's HTTP client providing a simpler interface as well as a blocking interface
"""
readme = "../README.md"
repository = "https://github.com/fortanix/simple-hyper-client"
documentation = "https://docs.rs/simple-hyper-client"
homepage = "https://github.com/fortanix/simple-hyper-client"
categories = ["web-programming::http-client"]
edition = "2018"

[dependencies]
futures-executor = "0.3"
futures-util = "0.3"
headers = "0.4"
http = "1.4"
http-body-util = "0.1"
hyper = { version = "1.10", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "service"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "macros", "net", "sync", "time"] }
tower-service = "0.3"

[dev-dependencies]
http-body-util = { version = "0.1", features = ["channel"] }
httparse = { version = "1" }
futures-util = "0.3"
